<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"     
    android:orientation="horizontal"
    tools:context=".MainActivity" >
  
<ScrollView
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >  

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical" >

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textStyle="bold"
         android:text="@string/tipo_cambio" />
     
     <TextView
         android:id="@+id/devCustomTextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
        />
 
          
	 <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/devaluacion" />

	 <TextView
	     android:id="@+id/devCustomTextView1"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_weight="1"
 		 />

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/devaluacion" />

      <TextView
          android:id="@+id/TextView02"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/tc_dev_no_cte" />

      <ImageView
          android:id="@+id/ImageView02"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/devaluacionnocte" />

      <TextView
          android:id="@+id/TextView01"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/tc_dev_cte" />

      <ImageView
          android:id="@+id/ImageView01"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/devaluacioncte" />

      <TextView
          android:id="@+id/TextView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/con_flu_caj_dev_cte" />

      <ImageView
          android:id="@+id/ImageView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/con_flu_caj_dev_cte" />

      <TextView
          android:id="@+id/TextView03"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/revaluacion" />

      <ImageView
          android:id="@+id/ImageView03"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/revaluacion" />

      <TextView
          android:id="@+id/TextView04"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/revaluacion_con_dev_cte" />

      <ImageView
          android:id="@+id/ImageView04"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/revaluacion_con_dev_cte" />


  </LinearLayout>

 </ScrollView>
</TableLayout>