<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"     
    android:orientation="horizontal"
    tools:context=".MainActivity" >
  
<ScrollView
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >  

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical" >

     <TextView
          android:id="@+id/TextView03"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/depreciacion" />

	 <TextView
          android:id="@+id/TextView03"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/met_linea_recta" />
	      	  <ImageView
         android:id="@+id/ImageView01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/met_linea_recta" />

	 <TextView
          android:id="@+id/TextView03"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/met_suma_digitos" />
	    <ImageView
         android:id="@+id/ImageView02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/met_suma_digitos" />
 		<ImageView
         android:id="@+id/ImageView03"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/met_suma_digitos1" />
	<TextView
         android:id="@+id/textView002"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|center_horizontal"
         android:layout_weight="1"
         android:gravity="center"
         android:text="VLt = P - Dt"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
 		<TextView
 		    android:id="@+id/depreciacionTextView01"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1" />

	  <TextView
          android:id="@+id/TextView03"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/escud_tribut_deprecia" /> 
   		 <TextView
	  	      android:id="@+id/depreciacionTextView03"
	  	      android:layout_width="wrap_content"
	  	      android:layout_height="wrap_content"
	  	      android:layout_weight="1"
 			/>
	 </LinearLayout>

 </ScrollView>
</TableLayout>
    

