<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"     
    android:orientation="horizontal"
    tools:context=".MainActivity" >
  
<ScrollView
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >  

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical" >

      <TextView
          android:id="@+id/TextView01"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/serie_pago_grad_lineal" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/val_pres_serie_triang_pag" />

      <ImageView
          android:id="@+id/ImageView01"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/p_dado_g" />

      <TextView
          android:id="@+id/TextView02"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="Luego:" />

      <TextView
          android:id="@+id/textView002"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical|center_horizontal"
          android:layout_weight="1"
          android:gravity="center"
          android:text="P = G(P/G , i , n)"
          android:textAlignment="center"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/val_pres_serie_pag_grad_lin" />

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:src="@drawable/p_dado_glineal" />

      <TextView
          android:id="@+id/TextView03"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/serie_pago_gradiente_geom" />

      <TextView
          android:id="@+id/TextView04"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="@string/val_pres_serie_pago_grad_geom" />

      <ImageView
          android:id="@+id/ImageView02"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/p_dado_ggeom" />
	 
       <TextView
          android:id="@+id/TextView02"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="Luego:" />

      <TextView
          android:id="@+id/textView002"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical|center_horizontal"
          android:layout_weight="1"
          android:gravity="center"
          android:text="P = A*(P/A* , i , g , n)"
          android:textAlignment="center"
          android:textSize="20sp"
          android:textStyle="bold" />
 
      <TextView
          android:id="@+id/factsEqui3TextView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"/>
          <requestFocus />
  </LinearLayout>

 </ScrollView>
</TableLayout>